// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Breadcrumb (snapshot) renders basic trail 1`] = `
<nav
  aria-label="breadcrumb"
>
  <ol
    class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
  >
    <li
      class="inline-flex items-center gap-1.5"
    >
      <a
        class="transition-colors hover:text-foreground"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      aria-hidden="true"
      class="[&>svg]:w-3.5 [&>svg]:h-3.5"
      role="presentation"
    >
      <svg
        class="lucide lucide-chevron-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="inline-flex items-center gap-1.5"
    >
      <span
        aria-current="page"
        aria-disabled="true"
        class="font-normal text-foreground"
        role="link"
      >
        Details
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb (snapshot) renders ellipsis between items 1`] = `
<nav
  aria-label="breadcrumb"
>
  <ol
    class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
  >
    <li
      class="inline-flex items-center gap-1.5"
    >
      <a
        class="transition-colors hover:text-foreground"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      aria-hidden="true"
      class="[&>svg]:w-3.5 [&>svg]:h-3.5"
      role="presentation"
    >
      <svg
        class="lucide lucide-chevron-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="inline-flex items-center gap-1.5"
    >
      <span
        aria-hidden="true"
        class="flex h-9 w-9 items-center justify-center"
        role="presentation"
      >
        <svg
          class="lucide lucide-ellipsis size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="19"
            cy="12"
            r="1"
          />
          <circle
            cx="5"
            cy="12"
            r="1"
          />
        </svg>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      aria-hidden="true"
      class="[&>svg]:w-3.5 [&>svg]:h-3.5"
      role="presentation"
    >
      <svg
        class="lucide lucide-chevron-right"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </li>
    <li
      class="inline-flex items-center gap-1.5"
    >
      <span
        aria-current="page"
        aria-disabled="true"
        class="font-normal text-foreground"
        role="link"
      >
        Current
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb (snapshot) renders with custom separator 1`] = `
<nav
  aria-label="breadcrumb"
>
  <ol
    class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
  >
    <li
      class="inline-flex items-center gap-1.5"
    >
      <a
        class="transition-colors hover:text-foreground"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      aria-hidden="true"
      class="[&>svg]:w-3.5 [&>svg]:h-3.5"
      role="presentation"
    >
      /
    </li>
    <li
      class="inline-flex items-center gap-1.5"
    >
      <span
        aria-current="page"
        aria-disabled="true"
        class="font-normal text-foreground"
        role="link"
      >
        Details
      </span>
    </li>
  </ol>
</nav>
`;
